--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body {
   font-family: 'Verdana', sans-serif;
   margin: 0; 
+  padding:0;
   font-size: 13px;
 }
 ul {
@@ -8,7 +9,7 @@ ul {
   padding:0;
 }
 .container {
-  max-width: 960px;
+  width: 960px;
   margin: 0 auto;
 }
 .cabinet-header {
@@ -20,7 +21,7 @@ ul {
 }
 .cabinet-name-search {
   width: 100%;
-  height: 39px;
+  height: 45px;
   background-color: #c5c5c5;
   display: flex;
   flex-direction: row;
@@ -40,6 +41,7 @@ font-size: 13px;
 }
 .cabinet-search{
   padding-right: 14px;
+
 }
 .cabinet-search-button{
 background-color: #9b9b9b;
@@ -47,6 +49,7 @@ color: #000000;
 border:1px solid #000000;
 border-radius: 0;
 padding-left:11px;
+
 }
 .cabinet-logo {
 width: 100%;
